# CS330M1

./: .gitignore  CMakeLists.txt  CS330M.sln  Notes.md
CS330M/: CMakeLists.txt  CS330M.vcxproj  CS330M.vcxproj.filters
CS330M/assets/shaders/: Backup  basic_lit.frag  basic_lit.vert  basic_shader.frag  basic_shader.vert  mod8.frag
CS330M/include/: Camera.h  Texture.h  application.h  material.h  mesh.h  model.h  shader.h  types.h
CS330M/include/Model_objects/: Coffee.h  Light.h  Watch.h  model_objects.h  pen.h  plane.h  portfolio.h
CS330M/src/: Camera.cpp  Light.cpp  Texture.cpp  Watch.cpp  application.cpp  material.cpp  mesh.cpp  model.cpp  shader.cpp
CS330M/src/Model_objects/: Coffee.cpp  Light.cpp  Watch.cpp  pen.cpp  plane.cpp  portfolio.cpp  window.cpp
Run-Me/Windows/assets/shaders/: backup.frag  backup2  backup_vert  basic_lit_2.frag  basic_lit_2.vert  basic_unlit_color.frag  mod6.frag  mod6.vert  mod7.frag  mod7.vert  texture.frag
